generate public key in X509 format